<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="25dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        style="@style/bold_headline_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:padding="10dp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/body"
        android:layout_marginBottom="16dp"
        android:text="@string/if_you_leave"
        android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        style="@style/button_outline"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/leave_page" />
    <androidx.appcompat.widget.AppCompatButton
        style="@style/button_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:text="@string/cancel"
        android:id="@+id/cancelButton" />



</LinearLayout>
